# SecScoreDB

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_EN.md  SecScoreDB-WebSockets.md  vcpkg.json
src/: DynamicFields.hpp  Event.h  FileHelper.cpp  FileHelper.h  Group.h  Permission.h  SSDBType.h  Schema.hpp  SecScoreDB.cpp  SecScoreDB.h  Student.h  User.h  UserManager.cpp  UserManager.h
tests/: main.cpp  websocket_client_test.cpp
tests/unit/: auth_test.cpp  db_test.cpp  entity_test.cpp  permission_test.cpp  schema_test.cpp  stress_test.cpp  test_main.cpp  user_test.cpp  websocket_e2e_test.cpp  websocket_test.cpp
wrappers/websockets/: Errors.cpp  Errors.hpp  Handlers.cpp  Handlers.hpp  JsonUtils.cpp  JsonUtils.hpp  Protocol.cpp  Protocol.hpp  SecScoreDB-WebSockets.md  TESTING_GUIDE.md  main.cpp  websocket_tests.http
